--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "nodemailer": "^7.0.3",
+    "resend": "^4.5.1",
     "stripe": "^18.1.0"
   },
   "devDependencies": {
